--- a/TRN/public/assets/main.css
+++ b/TRN/public/assets/main.css
@@ -841,7 +841,7 @@
   # Call To Action Section
   --------------------------------------------------------------*/
   .call-to-action .container {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/cta-bg.jpg") center center;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/img/KTM.webp") center center;
     background-size: cover;
     padding: 100px 60px;
     border-radius: 15px;
